# mdbx-py

./: .gitignore  .gitmodules  README.md  build.py  build_mdbx.py  pyproject.toml
.github/workflows/: wheels.yaml
mdbx/: __init__.py  mdbx.py
tests/: runme.py  test_iters.py  test_mdbx.py
