[tool.poetry]
name = "mdbx"
version = "0.1.0"
description = "The python bindings to libmdbx."
authors = ["lazymio <mio@lazym.io>"]
readme = "README.md"

include = [
    { path = "libmdbx/**", format = "sdist"},
    { path = "mdbx/lib/**", format = "wheel" },
]

exclude = [
    { path = "libmdbx/.git", format = "sdist"},
]

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core", "setuptools", "wheel"] # Not having cmake and ninja due to https://github.com/python-poetry/poetry/issues/8807
build-backend = "poetry.core.masonry.api"
